Implemented tests, and fixed `Main` to comply.